重构了连接工具的逻辑，初步测试